@@ -451,9 +451,8 @@ namespace Tomboy
 					else if (File.Exists (args [idx])) {
 						// This is potentially a note file
 						open_external_note_path = args [idx];
-					} else {
+					} else
 						open_note_name = args [idx];
-					}
 
 					break;
 
@@ -604,31 +603,38 @@ namespace Tomboy
 					// be part of our notes list.
 					if (remote.DisplayNote (
 							string.Format ("note://tomboy/{0}", note_id)) == false) {
-						
-						string noteTitle = null;
-						string noteXml = null;
-						
+
 						StreamReader sr = File.OpenText (open_external_note_path);
 						if (sr != null) {
-							noteXml = sr.ReadToEnd ();
+							string noteTitle = null;
+							string noteXml = sr.ReadToEnd ();
+							
+							// Make sure noteXml is parseable
+							XmlDocument xmlDoc = new XmlDocument ();
+							try {
+								xmlDoc.LoadXml (noteXml);
+							} catch {
+								noteXml = null;
+							}
 							
 							if (noteXml != null) {
-								noteTitle = GetTitleFromNoteXml (noteXml);
+								noteTitle = NoteArchiver.Instance.GetTitleFromNoteXml (noteXml);
+								if (noteTitle != null) {
+									// Check for conflicting titles
+									string baseTitle = (string)noteTitle.Clone ();
+									for (int i = 1; remote.FindNote (noteTitle) != string.Empty; i++)
+										noteTitle = baseTitle + " (" + i.ToString() + ")";
+									
+									string note_uri = remote.CreateNamedNote (noteTitle);
+									
+									// Update title in the note XML
+									noteXml = NoteArchiver.Instance.GetRenamedNoteXml (noteXml, baseTitle, noteTitle);
 
-								// Check for conflicting titles
-								string baseTitle = (string)noteTitle.Clone ();
-								for (int i = 1; remote.FindNote (noteTitle) != string.Empty; i++)
-									noteTitle = baseTitle + " (" + i.ToString() + ")";
-								
-								string note_uri = remote.CreateNamedNote (noteTitle);
-								// TODO: This method for updating the title in the noteXml
-								//       is a little overzealous.  Needs to be replaced.
-								noteXml = noteXml.Replace (baseTitle, noteTitle);
-								
-								if (note_uri != null) {
-									// Load in the XML contents of the note file
-									if (remote.SetNoteContentsCompleteXml (note_uri, noteXml))
-										remote.DisplayNote (note_uri);
+									if (note_uri != null) {
+										// Load in the XML contents of the note file
+										if (remote.SetNoteContentsCompleteXml (note_uri, noteXml))
+											remote.DisplayNote (note_uri);
+									}
 								}
 							}
 						}
@@ -655,28 +661,6 @@ namespace Tomboy
 				recent_changes.Present ();
 			}
 #endif // ENABLE_DBUS
-		}
-		
-		private string GetTitleFromNoteXml (string noteXml)
-		{
-			if (noteXml != null && noteXml.Length > 0) {
-				XmlTextReader xml = new XmlTextReader (new StringReader (noteXml));
-				xml.Namespaces = false;
-
-				while (xml.Read ()) {
-					switch (xml.NodeType) {
-					case XmlNodeType.Element:
-						switch (xml.Name) {
-					case "title":
-						return xml.ReadString ();
-						break;
-					}
-						break;
-					}
-				}
-			}
-			
-			return null;
 		}
 	}
 }
